[project]
name = "langgenai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langserve[all]>=0.3.3",
    "notebook>=7.5.5",
    "python-dotenv>=1.2.2",
    "pythonnet>=3.0.5",
]
